--- a/theme-assets/scss/components/_table.scss
+++ b/theme-assets/scss/components/_table.scss
@@ -1,14 +1,18 @@
-table {
-  border-spacing: 0;
-  border-collapse: collapse;;
+.markdown__body {
+  &:not(.library__example) {
+    table {
+      border-spacing: 0;
+      border-collapse: collapse;;
 
-  th {
-    border-bottom: 2px solid $gray-medium;
-    padding: 8px;
-  }
+      th {
+        border-bottom: 2px solid $gray-medium;
+        padding: 8px;
+      }
 
-  td {
-    border-bottom: 1px solid $gray-medium;
-    padding: 8px;
+      td {
+        border-bottom: 1px solid $gray-medium;
+        padding: 8px;
+      }
+    }
   }
 }
